--- a/style.css
+++ b/style.css
@@ -1,3 +1,70 @@
-.editor{
-    padding: 100px;
+body {
+    background-color: rgb(237, 245, 164);
+    background-repeat: no-repeat;
+
+}
+
+.editor {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    background-color: rgb(220, 253, 205);
+}
+
+#editor {
+    background-color: rgb(220, 253, 205);
+    font-size: xx-large !important;
+    height: 200px !important;
+}
+
+
+
+
+/* CSS */
+.button-62 {
+    background: linear-gradient(to bottom right, #EF4765, #FF9A5A);
+    border: 0;
+    border-radius: 12px;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: -apple-system, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 2.5;
+    outline: transparent;
+    padding: 0 1rem;
+    text-align: center;
+    text-decoration: none;
+    transition: box-shadow .2s ease-in-out;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+}
+
+.button-62:not([disabled]):focus {
+    box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
+}
+
+.button-62:not([disabled]):hover {
+    box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
+}
+
+.post-btn {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.card{
+    background-color: rgb(220, 253, 205);
+}
+.main{
+    margin-top: 50px;
+}
+.main-card{
+    font-size: xx-large !important;
+    text-align: center;
+}
+.card-title{
+    text-decoration: underline;
 }
