--- a/style.css
+++ b/style.css
@@ -14,6 +14,21 @@ body {
     font-size: xx-large !important;
     height: 200px !important;
 }
+.heading{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    background-color: rgb(220, 253, 205);
+}
+.title-heading{
+    background: linear-gradient(to bottom right, #EF4765, #FF9A5A) !important;
+    color: white;
+}
+.heading:focus{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    background-color: rgb(220, 253, 205);
+}
+.container{
+    margin-top: 20px;
+}
 
 
 
